new-infra/k8s/system-netpols/cilium-health-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health-netpol
spec:
  endpointSelector:
    matchLabels:
      "reserved:health": ""
  ingress:
    - fromEntities:
        - remote-node
    - fromEndpoints:
        - matchLabels:
            "reserved:health": ""
  egress:
    - toEntities:
        - remote-node
    - toEndpoints:
        - matchLabels:
            "reserved:health": ""
